property-toggle-util/main/default/objects/QDX_Property__mdt/fields/LongTextValue__c.field-meta.xml
<CustomField>
    <fullName>LongTextValue__c</fullName>
    <label>Value (Long Text)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>