property-toggle-util/main/default/objects/QDX_Property__mdt/fields/NumberValue__c.field-meta.xml
<CustomField>
    <fullName>NumberValue__c</fullName>
    <label>Value (Number)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>