property-toggle-util/main/default/objects/QDX_Property__mdt/fields/ProfileId__c.field-meta.xml
<CustomField>
    <fullName>ProfileId__c</fullName>
    <inlineHelpText>Requires SF Instance to be set as well. If Sf Instance not set, this will be ignored.</inlineHelpText>
    <label>ProfileId</label>
    <length>32</length>
    <type>Text</type>
</CustomField>