property-toggle-util/main/default/objects/QDX_Property__mdt/fields/QDX_SF_Instance__c.field-meta.xml
<CustomField>
    <fullName>QDX_SF_Instance__c</fullName>
    <description>Name of sandbox to which current setting is applicable.</description>
    <label>SF Instance</label>
    <referenceTo>QDX_SF_Instance__mdt</referenceTo>
    <relationshipLabel>QDX Properties</relationshipLabel>
    <relationshipName>QDX_Properties</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>