property-toggle-util/main/default/objects/QDX_Property__mdt/fields/TextValue__c.field-meta.xml
<CustomField>
    <fullName>TextValue__c</fullName>
    <label>Value (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>