property-toggle-util/main/default/objects/QDX_Property__mdt/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <inlineHelpText>Requires SF Instance to be set as well. If Sf Instance not set, this will be ignored.</inlineHelpText>
    <label>UserName</label>
    <length>64</length>
    <type>Text</type>
</CustomField>