property-toggle-util/main/default/objects/QDX_Property__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>